[package]
name = "mumen"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = {version = "3.1.8", features = ["derive", "color"]}
clap_complete = "3.1.1"
chrono = "0.4.19"
log = "0.4.16"
simplelog = "0.11.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
clap-verbosity-flag = "1.0.0"
saitama = "0.0.3"

[dependencies]
crossbeam = "0.8.1"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive", "color"] }
log = "0.4.16"
simplelog = "0.11.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
clap-verbosity-flag = "1.0.0"
saitama = "0.0.3"
