[package]
name = "netero"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = { version = "3.1.8", features = ["derive", "color"] }
clap_complete = "3.1.1"
chrono = "0.4.19"
log = "0.4.16"
simplelog = "0.11.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
clap-verbosity-flag = "1.0.0"
saitama = "0.0.5"
regex = "1.5.5"

[dependencies]
crossbeam = "0.8.1"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive", "color"] }
log = "0.4.16"
simplelog = "0.11.2"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
clap-verbosity-flag = "1.0.0"
saitama = "0.0.6"
regex = "1.5.5"
tokio = "1.17.0"
serde = "1.0.136"
serde_json = "1.0.79"
itertools = "0.10.3"
statrs = "0.15.0"
tui = { version = "0.18.0", features = ["crossterm"] }
crossterm = "0.23.2"
mckernant1-tools = { version = "0.0.4", features = ["channels"] }
